@@ -31,5 +31,5 @@ Suggests:
     tibble,
     plyr
 VignetteBuilder: knitr
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
 Encoding: UTF-8
