@@ -1,3 +1,8 @@
+# assertr development version
+
+* Added the ability to check non-numeric classes with `within_bounds()`
+  (fix #89)
+
 # assertr 3.0
 
 * Finally removed deprecated underscore functions
